# internal/app/app.go
@@ -141,32 +141,33 @@ func (a *App) initHTTPHandlers() http.Handler {
 	mux := http.NewServeMux()
 	// Define HTTP request handlers
 	handlers := map[string]func(http.ResponseWriter, *http.Request){
-		"/get/tag/":      a.handleAPIGetTag,
-		"/get/tag/list/": a.handleAPIGetTagList,
-		"/get/tag/up/":   a.handleAPIGetTagUp,
-		"/get/tag/down/": a.handleAPIGetTagDown,
-		"/api/info/":     a.handleAPIInfo,
-		"/api/reload/":   a.handleAPIReloadConfig,
-		"/api/log/":      a.handleAPIGetLog,
-		"/api/status/":   a.handleAPIServerStatus,
-		"/favicon.ico":   a.handleFavicon,
-		"/logs/":         a.handlePageLog,
-		"/data/":         a.handlePageData,
-		"/tags/":         a.handlePageTags,
-		"/":              a.handlePageAny("home", map[string]interface{}{"descr": "Robin"}),
-		"/images/":       a.handleDirectory("images"),
-		"/scripts/":      a.handleDirectory("scripts"),
-		"/css/":          a.handleDirectory("css"),
-		"/api/swagger/":  swagger.Handler(swagger.URL("/api/swagger/doc.json")),
-		"/swagger/":      a.handlePageSwagger,
-		"/templ/list/":   a.handleTemplateList,
-		"/templ/add/":    a.handleTemplateAdd,
-		"/templ/get/":    a.handleTemplateGet,
-		"/templ/edit/":   a.handleTemplateEdit,
-		"/templ/delete/": a.handleTemplateDelete,
-		"/templ/exec/":   a.handleTemplateExec,
-		"/tag/decode/":   a.handleTagDecode,
-		"/api/v2/get/":   a.handleAPIV2GetTagOnDate,
+		"/get/tag/":       a.handleAPIGetTag,
+		"/get/tag/list/":  a.handleAPIGetTagList,
+		"/get/tag/up/":    a.handleAPIGetTagUp,
+		"/get/tag/down/":  a.handleAPIGetTagDown,
+		"/api/info/":      a.handleAPIInfo,
+		"/api/reload/":    a.handleAPIReloadConfig,
+		"/api/log/":       a.handleAPIGetLog,
+		"/api/log/clear/": a.handleAPIClearLog,
+		"/api/status/":    a.handleAPIServerStatus,
+		"/favicon.ico":    a.handleFavicon,
+		"/logs/":          a.handlePageLog,
+		"/data/":          a.handlePageData,
+		"/tags/":          a.handlePageTags,
+		"/":               a.handlePageAny("home", map[string]interface{}{"descr": "Robin"}),
+		"/images/":        a.handleDirectory("images"),
+		"/scripts/":       a.handleDirectory("scripts"),
+		"/css/":           a.handleDirectory("css"),
+		"/api/swagger/":   swagger.Handler(swagger.URL("/api/swagger/doc.json")),
+		"/swagger/":       a.handlePageSwagger,
+		"/templ/list/":    a.handleTemplateList,
+		"/templ/add/":     a.handleTemplateAdd,
+		"/templ/get/":     a.handleTemplateGet,
+		"/templ/edit/":    a.handleTemplateEdit,
+		"/templ/delete/":  a.handleTemplateDelete,
+		"/templ/exec/":    a.handleTemplateExec,
+		"/tag/decode/":    a.handleTagDecode,
+		"/api/v2/get/":    a.handleAPIV2GetTagOnDate,
 	}
 
 	// Register HTTP request handlers
